2009-05-20  Alan McGovern  <amcgovern@novell.com>

	* Selector.cs: OnItemsChanged is raised in ItemsControl,
	not Selector.
	  
2009-05-01  Alan McGovern  <amcgovern@novell.com>

	* Selector.cs: When raising the SelectionChanged event, we
	  need to always pass the old/new selected *item*, not the
	  SelectedIndex.

2009-04-23  Alan McGovern  <amcgovern@novell.com>

	* Popup.cs: Allow popups to use a transparent canvas to catch
	  clicks outside of the popup area. ComboBox uses this to
	  close its popup.

2009-04-23  Alan McGovern  <amcgovern@novell.com>

	* Selector.cs: Move the Notify* methods into Selector as both
	  Listbox and ComboBox require the same API.

2009-04-17  Alan McGovern  <amcgovern@novell.com>

	* Selector.cs: Make IsSelectionActive work. Also make showing
	  the popup work. Currently no items are being displayed in
	  the popup as the ItemsPresenter is never getting loaded.

2009-04-17  Alan McGovern  <amcgovern@novell.com>

	* Popup.cs: Correctly mark Popup.Child as its Content
	  property.

2009-04-16  Alan McGovern  <amcgovern@novell.com>

	* Selector.cs: Implement ClearContainerForItemOverride and fix
	  some more virtual -> override issues.

2009-04-16  Alan McGovern  <amcgovern@novell.com>

	* Selector.cs: Nothing appears to make
	  Selector.GetIsSelectionActive return true. The documentation
	  offers no hints either.

2009-04-16  Alan McGovern  <amcgovern@novell.com>

	* Selector.cs: Route the collection changed event through the
	  Selector, fixes three tests.

2009-04-15  Alan McGovern  <amcgovern@novell.com>

	* Selector.cs: If the new value is null, Selector should not
	  revert to the old value.

2009-04-13  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ScrollEventHandler.cs: Delete files we got from MS' controls
	  drop, and update project file to compile.

2009-04-02  Alan McGovern  <amcgovern@novell.com>

	* Popup.cs: Popups are treated as top level elements which are